--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Beranda</title>
+    <title>Dyas Fiansyah</title>
 </head>
 
 <body>
+    <h1>
+        CONTOH
+    </h1>
     <div>
         <input placeholder="Nama" id="nama" type="text">
         <input placeholder="Alamat" id="alamat" type="text">
